# project_1

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: master.yml
core/core/utils/: collections_utils.py  misc.py  settings.py
core/general/utils/: collections_utils.py  misc.py  settings.py
core/project/: __init__.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
scripts/: entrypoint.sh
